<resources>
    <string name="app_name">HealthCare</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_nav">navActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">dont_have_an_account</string>
    <string name="sign_in_button">sign_in_button</string>
    <string name="log_inTextView">log_in_text_view</string>
    <string name="sign_in">sign in</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="textview_profilename">Profile Name</string>
    <string name="textview_profileAge">Age</string>
    <string name="textview_age_profile">Age</string>
    <string name="textview_gender_profile">Gender</string>
    <string name="textview_speciality_profile">Speciality</string>
    <string name="textview_phone_profile">Phone</string>
    <string name="textview_blood_group_profile">Blood Group</string>
    <string name="editbutton_profile">Edit</string>
    <string name="textview_email_profile">Email</string>
    <string name="edittext_bloodgroup_profile">Blood Group</string>
    <string name="edittext_delete_profile">Delete</string>
    <string name="radio_female_profie">Female</string>
    <string name="radio_male_profile">Male</string>
    <string name="img_profile_icon_profile">profile_icon</string>
    <string name="signin_button_signin">Sign In</string>
    <string name="user_name_signin">User Name</string>
    <string name="button_signin_signin">Button</string>
    <string name="usericon_signin">usericon</string>
    <string name="password_signin">Password</string>
    <string name="re_enter_password_signin">Re-Enter Password</string>
    <string name="button_login">Button</string>
    <string name="button_sign_in_login">Sign In</string>
    <string name="button_log_in">Log In</string>
    <string name="login_icon_login">Login icon</string>
    <string name="btn_delete_profile">delete</string>
    <string name="edittext_profile_age">age</string>
    <string name="edittext_profile_name">name</string>
    <string name="edittext_profile_speciality">speciality</string>
    <string name="edittext_profile_blood_group">blood group</string>
    <string name="edittext_profile_phone">phone</string>
    <string name="edittext_profile_email">email</string>
    <string name="editText_edit_profile_edit_age">edit age</string>
    <string name="editText_edit_profile_edit_name">edit name</string>
    <string name="editText_edit_profile_edit_speciality">edit speciality</string>
    <string name="editText_edit_profile_edit_phone">edit phone</string>
    <string name="editText_edit_profile_edit_email">edit email</string>
    <string name="editText_edit_profile_edit_blood_group">edit blood group</string>
</resources>
