<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="186dp"
        android:layout_height="108dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_profile_icon_profile"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usericon_profile" />

    <EditText
        android:id="@+id/editText_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_profile_name"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="182dp" />

    <LinearLayout
        android:layout_width="121dp"
        android:layout_height="428dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editText_profile_name">

        <TextView
            android:id="@+id/textView_profile_age"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_age_profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/textview_gender_profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_profile_specility"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/textview_speciality_profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_phone_profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_profile_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_email_profile"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_profile_bloodgroup"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_blood_group_profile"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="188dp"
        android:layout_height="449dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/editText_profile_name">

        <EditText
            android:id="@+id/editText_profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:duplicateParentState="false"
            android:ems="10"
            android:hint="@string/edittext_profile_age"

            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radioButton_profile_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_male_profile" />

            <RadioButton
                android:id="@+id/radioButton_proflie_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_female_profie" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText_profile_speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/edittext_profile_speciality"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edittext_profile_phone"
            android:inputType="textPersonName|phone" />

        <EditText
            android:id="@+id/editText_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edittext_profile_email"
            android:inputType="textPersonName|textEmailAddress" />

        <EditText
            android:id="@+id/editText_profile_bloodgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/edittext_profile_blood_group"
            android:inputType="textPersonName"
            android:autofillHints="" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="645dp" />

    <Button
        android:id="@+id/button_profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/editbutton_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_profile_delete"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/button_profile_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.157" />
</androidx.constraintlayout.widget.ConstraintLayout>